kubernetes/tsbe-demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tsbe-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: tsbe-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsbe-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tsbe-demo
  template:
    metadata:
      labels:
        app: tsbe-demo
    spec:
      imagePullSecrets:
      - name: docker-reg
      containers:
      - name: tsbe-hugo-demo
        image: yannikg/tsbe-hugo-demo:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
