kubernetes/tsbe-demo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tsbe-demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - tsbe-demo.yannikgartmann.ch
    secretName: tsbe-demo-homepage-tls
  rules:

  - host: tsbe-demo.ch
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tsbe-demo
            port:
              number: 80
